
16/09/2023
- updated the TB parser to support the new TB mail format. Many thanks to Elena Kislian!

01/10/2023
- introduced versionning fot the .tbi file
- still a lot of formatting done because of the broken configuration of clang-format in Qt Creator...

01/10/2023
- reinforced the .tbi format by specifying the length of integers used in the header

13/12/2023
- added an idea in the todo list

05/02/2024
- added Ctrl+F shortcut to focus the search field in the main window

18/02/2024
- bumped to version 1.3.0
- dramatically reduced the startup time by removing a lot of useless UI refreshes
- made possible to download all available technical publications
- fixed a lambda declaration in DlgSettings

24/02/2024
- made the case of local variables more consistent
- dramatically improved startup time (again) by calling UI update only once, when the main window is fully populated
- used a class to have dynamic sub-menu to download the documentations, in the main window and in the TB edition window

24/02/2024
- allowed DownloadMenu::setItems() to specify a widget which takes the focus after a download. Usefull in DlgTB

24/02/2024
- bugfix: main window was not updated after editing a TB by double-clicking its entry

24/02/2024
- added the changelog from Github
- externalized the help text (Docs/Help.txt)
- started to build the DlgHelp with external ressources (HelpRes.qrc)
- added a lot of comment
- renamed some files/methods/variables to be more consistent

25/02/2024
- revamped the DlgHelp dialog (new tabs, dynamic strings, usage of QRC to embed text files)

25/02/2024
- added the ability to download Technical Bulletin and Customer Technical Information files
- renamed some Windows Registry keys
- automatically clean some old keys (once per application run)

25/02/2024
- fixed the DL sub-menu not offering to download TB PDF/CTI
- fixed the DL sub-menu offering to download TB PDF/CTI even if there is no  RK number

26/02/2024
- bumped to version 1.6.0